--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
     <title>Document</title>
   </head>
   <body>
+    <style>
+        h1{
+            color: rebeccapurple;
+        }
+    </style>
+    <div class="container">
+        <div class="header"><h1>hello</h1></div>
+    </div>
   </body>
 </html>
