--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
   </head>
   <body>
     <style>
-        h1{
-            color: rebeccapurple;
-        }
+      h1 {
+        color: rebeccapurple;
+      }
+      .section{
+        background-color: aqua;
+      }
     </style>
     <div class="container">
-        <div class="header"><h1>hello</h1></div>
+      <div class="header"><h1>hello</h1></div>
+      <div class="section">
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam,
+          dolorem!
+        </p>
+      </div>
     </div>
   </body>
 </html>
