--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
       h1 {
         color: rebeccapurple;
       }
-      .section{
+      .section {
         background-color: aqua;
+      }
+      .footer {
+        background-color: brown;
+        color: white;
       }
     </style>
     <div class="container">
@@ -23,6 +27,7 @@
           dolorem!
         </p>
       </div>
+      <div class="footer"><p>footer</p></div>
     </div>
   </body>
 </html>
