--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam,
           dolorem!
         </p>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam,
+            dolorem!
+          </p>
       </div>
       <div class="footer"><p>footer</p></div>
     </div>
