adding update text

--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
           dolorem!
         </p>
         <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam,
-            dolorem!
-          </p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam,
+          dolorem!
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam,
+          dolorem! Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          Accusamus, maxime. Provident numquam et blanditiis repellendus
+          reiciendis repudiandae saepe mollitia voluptas.
+        </p>
       </div>
       <div class="footer"><p>footer</p></div>
     </div>
